feat(profile): implement address and location info update
