# api/src/main/java/com/gemstoneseekers/dtos/request/AddressRequest.java
@@ -1,0 +1,11 @@
+package com.gemstoneseekers.dtos.request;
+
+public record AddressRequest(
+    String zipCode,
+    String street,
+    String number,
+    String neighborhood,
+    String complement,
+    LocationRequest location
+) {
+}
