# api/src/main/java/com/gemstoneseekers/dtos/request/LocationRequest.java
@@ -1,0 +1,8 @@
+package com.gemstoneseekers.dtos.request;
+
+public record LocationRequest(
+    String city,
+    String state,
+    String country
+) {
+}
